--- a/app/.htaccess
+++ b/app/.htaccess
@@ -1,5 +1,4 @@
 RewriteEngine on
-RewriteBase /inquiry/form/
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule . /inquiry/form/index.php [L]
+RewriteRule . index.php [L]
