mod xdebug-config.ini

--- a/xdebug-conf.ini
+++ b/xdebug-conf.ini
@@ -2,3 +2,6 @@ xdebug.remote_enable = On
 xdebug.remote_autostart = On
 xdebug.remote_host = ###HOST_IP###
 xdebug.remote_port =59000
+xdebug.var_display_max_children = -1
+xdebug.var_display_max_data = -1
+xdebug.var_display_max_depth = -1
