--- a/php.ini
+++ b/php.ini
@@ -569,7 +569,7 @@ html_errors = On
 ; empty.
 ; http://php.net/error-log
 ; Example:
-error_log = /var/log/apache2/php_error_log
+error_log = /tmp/php_error_log
 ; Log errors to syslog (Event Log on Windows).
 ;error_log = syslog
 
